# cliperge

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: clipboard.rs  file_operations.rs  main.rs
